unsupervised learning without collapsible markdowns

--- a/assessments/c5-unsupervised_learning-dynamic_clustering-Alberto_Vargas.ipynb
+++ b/assessments/c5-unsupervised_learning-dynamic_clustering-Alberto_Vargas.ipynb
@@ -32,18 +32,13 @@
    "metadata": {},
    "source": [
     "### Assessment description. \n",
-    "<details><summary> Click to Expand.</summary>\n",
-    "<p>\n",
     "\n",
     "El objetivo de este trabajo es encontrar y estudiar una versión mejorada de alguno de los algoritmos estudiados en clase. Una vez seleccionado, se estudiará esa nueva versión del algoritmo y se compararán ambos (el original y la versión mejorada).\n",
     "\n",
     "Para llevar a cabo esta actividad, se deberá elegir uno de los métodos estudiados en clase. Se buscará en la literatura científica relacionada un artículo que proponga una mejora al método seleccionado. La mejora puede ser, por ejemplo, una mejor inicialización del algoritmo, la supresión-sustitución de un parámetro, etc. Una vez elegido un algoritmo y encontrado un artículo que proponga una mejora para el mismo, se deberán programar ambos algoritmos (el básico y la versión mejorada).\n",
     "\n",
     "- Se analizarán los resultados y se prestará atención a la contribución de la mejora del algoritmo extendido. ¿Se aprecia en los resultados la mejora que defienden los autores en el artículo estudiado? Se elaborará un informe documentando todo el proceso y con un análisis exhaustivo de los resultados.\n",
-    "-  Se compararán los resultados de ambos algoritmos en al menos 2 datasets a elegir, calculando métricas extrínsecas (en uno de ellos) e intrínsecas. \n",
-    "\n",
-    "</p>\n",
-    "</details>"
+    "-  Se compararán los resultados de ambos algoritmos en al menos 2 datasets a elegir, calculando métricas extrínsecas (en uno de ellos) e intrínsecas. \n"
    ]
   },
   {
@@ -51,8 +46,7 @@
    "metadata": {},
    "source": [
     "### Solution. Content & Approach.\n",
-    "<details><summary> Click to Expand.</summary>\n",
-    "<p>\n",
+    "\n",
     "- Dynamic Clustering of Data with Modified K-Means Algorithm.\n",
     "\n",
     "- Author: Ahamed Shafeeq. Manipal International University.\n",
@@ -86,10 +80,7 @@
     "- Extrinsic metrics: Inter cluster distance, Intra cluster distance, silhouette.\n",
     "\n",
     "-----------------------------------------------\n",
-    "------------------------------------------------\n",
-    "    \n",
-    "</p>\n",
-    "</details>"
+    "------------------------------------------------\n"
    ]
   },
   {
